--- a/ch7-conclusion.tex
+++ b/ch7-conclusion.tex
@@ -2,32 +2,29 @@
 \label{ch:conclusion}
 
 \section{Summary}
-This thesis presents a novel anomaly detection methodology based on the analysis of gradients of the log-density (scores). It introduced the idea of Multiscale Score Matching Analysis (MSMA): a method using \textit{multiple} scales to describe a space in which outliers may be separated from inliers.
-To allow the model to incorporate categorical information, I proposed the Gumbel-Noise Score Matching (GNSM) objective to train score matching networks on discrete data. This not only opens up MSMA to tabular data but also enables future work to mix demographic data into the models.
-Spatial-MSMA further extends the methodology to localize anomalies to patches within an image. It was successfully applied to 3D MRI data and was able to detect lesions at a significantly higher accuracy compared to baselines.
-Finally, a case-study was presented to elucidate how score-norms can be employed for exploratory research and provide scientific insights into the data.
+This thesis introduces a novel anomaly detection methodology based on the analysis of gradients of the log-density (scores). The key contribution is the Multiscale Score Matching Analysis (MSMA), a method utilizing \textit{multiple} scales to differentiate outliers from inliers. To incorporate categorical information, the Gumbel-Noise Score Matching (GNSM) objective was proposed, enabling the training of score matching networks on discrete data. This innovation not only extends MSMA to tabular data but also paves the way for future integration of demographic data into the models.
+
+The methodology was further extended with Spatial-MSMA, which localizes anomalies to specific patches within an image. This technique was successfully applied to 3D MRI data, demonstrating significantly higher accuracy in detecting lesions compared to baseline methods. Additionally, a case study was presented to illustrate how score-norms can be employed for exploratory research, providing valuable scientific insights into the data.
+
 
 \section{Limitations}
-One fundamental limitation of MSMA, which is common to any anomaly detection approach, is the assumption that the training data is fully representative of the typical population of interest. In other words, typicality is solely inferred from the training data. This places a significant burden on the user to ensure that the training data is clean of outliers and truly representative of the typical population.
-% A theoretical limitation of this method is that the typical population is inferred from the training data. 
-% Currently, the models do not have any world knowledge outside of the data that is provided during training.
+A fundamental limitation of MSMA, shared by many anomaly detection approaches, is its reliance on the training data to represent the typical population accurately. In other words, typicality is \textit{solely} inferred from the training data. This places a significant burden on the user to ensure the training data is free from outliers and truly representative..
 
-Furthermore, MSMA requires a deep learning score estimator, which often involves model architectures with millions of parameters and necessitates the use of multiple GPUs for training. These models also require long training times to converge, sometimes spanning multiple days.\footnote{For reference, the 3D score model used in chapters~\ref{ch:localizing} and~\ref{ch:demyst} was trained for 15 days, followed by another two days for training Spatial-MSMA. }. These computational requirements can impede the wide-scale adoption of the presented methods, as such resources are not readily available to all practitioners.
+The computational requirements of MSMA present another challenge. The method requires deep learning score estimators with millions of parameters, necessitating multiple GPUs and extended training periods.\footnote{For instance, the 3D score model used in chapters~\ref{ch:localizing} and~\ref{ch:demyst} was trained for 15 days, followed by ab additional two days for training Spatial-MSMA.} These resource demands may impede widespread adoption of the presented methods.
 
-Additionally, score matching tends to be data-hungry, requiring thousands of samples for training. This can be a serious bottleneck in the medical imaging domain, where acquiring images is costly in terms of time and resources. When working with limited samples, the model may overfit to the training population, causing the score estimates to become unreliable at test time. Moreover, when pooling datasets from multiple sources, practitioners are required to preprocess the data to mitigate site-wide or scanner differences. Such systematic differences between images acquired from different scanners can also pose a problem when applying MSMA to datasets it was not trained on.
+Score matching is also data-intensive, requiring thousands of samples for effective training. This can be particularly problematic in medical imaging, where data acquisition is costly and time-consuming. Limited sample sizes may lead to overfitting, resulting in unreliable score estimates during testing. Moreover, when combining datasets from multiple sources, practitioners must address site-wide or scanner differences through preprocessing.
 
-Finally, while this thesis provides empirical evidence for the anomaly detection capabilities of score-norms, it lacks a theoretical analysis explaining why the score-norm space is expected to separate outliers. Such a theoretical understanding could inform the choice of hyperparameters, optimization techniques, and data selection.
-
+Lastly, while empirical evidence supports the anomaly detection capabilities of score-norms, the thesis lacks a theoretical analysis explaining why the score-norm space is expected to separate outliers effectively. Such an understanding could inform hyperparameter selection, optimization techniques, and data curation.
 
 \section{Future Work}
 
 There are several short-term directions for extending the work presented in this thesis. Firstly, the entire MSMA pipeline, including the score model, the likelihood model for MSMA, and the patch-based likelihood model for Spatial-MSMA, could be trained in an end-to-end fashion. This combined loss objective could focus the model's attention on input features that are best suited for anomaly detection.
 
-Secondly, it may be worthwhile to automate the procedure of specifying the number of noise scales used in MSMA, which is currently a user-defined hyperparameter. This could be achieved by employing a `routing' network, similar to those used in mixture-of-experts models~\cite{zoph2022stmoe}. Such a network would be responsible for selecting a subset of time points at inference time according to the input sample. Intuitively, the model would select only those time points that have the highest probability of detecting the input in the score-norm space.
+Secondly, it may be worthwhile to automate the selection of noise scales used in MSMA, currently a user-defined hyperparameter. This could be achieved by employing a `routing' network, similar to those used in mixture-of-experts models~\cite{zoph2022stmoe}. Such a network would be responsible for selecting a subset of time points at inference time according to the input sample. Intuitively, the model would select only those time points that have the highest probability of detecting the input in the score-norm space.
 
 Another avenue for future research would be to incorporate metadata paired with the images into the analysis. For natural images, one could include text captions or class labels, while for medical imaging, demographic data or diagnostic reports could be included alongside the brain MRIs. Furthermore, while the GNSM objective is well-suited for learning scores of categorical information, there are novel developments in categorical score matching, such as~\cite{graves2024bayesian,lou2024discrete}. It remains an open question whether these methods can be used in MSMA and how they compare to GNSM.
 
-The aforementioned extensions are specific and can be considered 'low-hanging fruits.' However, I am also interested in a broader, more long-term research endeavor for improving medical anomaly detectors. As mentioned in the previous section, the main limitation of anomaly detectors stems from defining typicality solely through the training data. If the training set of brain imaging data includes a significant number of lesioned brains, the model may assume them to be part of the typical set. However, any reasonably trained medical practitioner would not make the same mistake. This is because medical practitioners accumulate a rich prior about healthy anatomy, including healthy brains, over the course of their studies.
+The aforementioned extensions are specific and can be considered 'low-hanging fruits' However, I am also interested in a broader, more long-term research endeavor for improving medical anomaly detectors. As mentioned in the previous section, the main limitation of anomaly detectors stems from defining typicality solely through the training data. If the training set of brain imaging data includes a significant number of lesioned brains, the model may assume them to be part of the typical set. However, any reasonably trained medical practitioner would not make the same mistake. This is because medical practitioners accumulate a rich prior about healthy anatomy, including healthy brains, over the course of their studies.
 
 The question arises: Can we build deep learning models that have also accumulated this prior? There is a concept of a "world-model" in the field of robotics~\cite{ha2018world}, which refers to the robot's understanding of physics and its best interpretation of the external world. Could we build deep learning models with a world-model of medicine and anatomy? Such a model would need to be multi-modal, taking both images and text as input. It could be trained on a combination of medical images (potentially paired with diagnostic reports), research papers, and medical textbooks. A model like this would have existing notions of pathologies, developmental disorders, and typical development, which it could use to inform its anomaly detection decisions.
 
