--- a/diss.bib
+++ b/diss.bib
@@ -51,7 +51,7 @@ ISSN={1662-5161},
   date = {2009},
   series = {Essentials of {{DAS-II}}® Assessment.},
   pages = {xiv, 401},
-  publisher = {John Wiley \& Sons Inc},
+  publisher = {John Wiley and Sons Inc},
   location = {Hoboken,  NJ,  US},
   isbn = {978-0-470-22520-2 (Paperback)},
   pagetotal = {xiv, 401},
@@ -64,7 +64,7 @@ ISSN={1662-5161},
   author = {Sparrow, Sara S. and Cicchetti, Domenic V.},
   date = {1989},
   pages = {199--231},
-  publisher = {Allyn \& Bacon},
+  publisher = {Allyn and Bacon},
   location = {Needham Heights,  MA,  US},
   isbn = {0-205-08457-5 (Hardcover); 0-205-11923-9 (Hardcover)},
   keywords = {*Intellectual Development Disorder,*Personality Measures,*Testing,Adaptive Testing,Behavioral Assessment,Vineland Social Maturity Scale}
@@ -191,7 +191,7 @@ url={https://openreview.net/forum?id=B1Yy1BxCZ},
   title = {Neural Spline Flows},
   booktitle = {Advances in Neural Information Processing Systems},
   author = {Durkan, Conor and Bekasov, Artur and Murray, Iain and Papamakarios, George},
-  editor = {Wallach, H. and Larochelle, H. and Beygelzimer, A. and family=Buc, given=F., prefix=dAlché-, useprefix=true and Fox, E. and Garnett, R.},
+  editor = {Wallach, H. and Larochelle, H. and Beygelzimer, A. and Fox, E. and Garnett, R.},
   year = {2019},
   volume = {32},
   publisher = {Curran Associates, Inc.},
@@ -276,7 +276,7 @@ number = {3},
 pages = {035003},
 author = {Antonio Carlos da S Senra Filho and Fabrício Henrique Simozo and Antonio Carlos dos Santos and Luiz Otavio Murta Junior},
 title = {Multiple Sclerosis multimodal lesion simulation tool (MS-MIST)},
-journal = {Biomedical Physics & Engineering Express},
+journal = {Biomedical Physics and Engineering Express},
 }
 
 @INPROCEEDINGS{gradcam,
@@ -539,7 +539,7 @@ year = {2019}
 }
 
 @inproceedings{vaswani,
- author = {Vaswani, Ashish and Shazeer, Noam and Parmar, Niki and Uszkoreit, Jakob and Jones, Llion and Gomez, Aidan N and Kaiser, \L ukasz and Polosukhin, Illia},
+ author = {Vaswani, Ashish and Shazeer, Noam and Parmar, Niki and Uszkoreit, Jakob and Jones, Llion and Gomez, Aidan N and Kaiser, Lukasz and Polosukhin, Illia},
  booktitle = {Advances in Neural Information Processing Systems},
  editor = {I. Guyon and U. Von Luxburg and S. Bengio and H. Wallach and R. Fergus and S. Vishwanathan and R. Garnett},
  pages = {},
