--- a/frontmatter/abbreviations.tex
+++ b/frontmatter/abbreviations.tex
@@ -12,10 +12,18 @@
 \Abi{ASD}{Autism Spectrum Disorder}
 \Ab{DS}{Down Syndrome}
 \Ab{DSM}{Denoising Score Matching}
-\Ab{EBM}{Energy-Based Model}
+\Ab{EBM}{Energy Based Model}
+\Ab{GAN}{Generative Adversarial Network}
+\Ab{GMM}{Gaussian Mixture Model}
 \Ab{GNSM}{Gumbel Noise Score Matching}
 \Ab{MSMA}{Multiscale Score Matching Analysis}
+\Ab{MRI}{Magnetic Resonance Imaging}
+\Ab{NCSN}{Noise Conditioned Score Network}
 \Ab{OOD}{Out-of-Distribution Detection}
+\Ab{SDE}{Stochastic Differential Equation}
+\Ab{SOM}{Self-Organizing Map}
+\Ab{VESDE}{Variance Exploding Stochastic Differential Equation}
+
 % \Ab{AYO}{Add Your Own in alphabetic order\ldots}
 \end{tabbing}
 
