--- a/frontmatter/acknowledgement.tex
+++ b/frontmatter/acknowledgement.tex
@@ -7,6 +7,21 @@
 {\normalfont \textbf{ACKNOWLEDGEMENTS}}
 \end{center}
 
-I would like to thank my advisor, Dr. Martin Styner.
+% I would like to thank my advisor, Dr. Martin Styner, for his utmost support and relentless
+% optimism throughout my PhD journey. Martin gave me space to explore, learn and grow, and I will
+% forever be indebted to him for that. I would like to thank each of my committee members: Junier, for
+% helping me from the very start and pushing me to pursue my ideas with rigor; Danielle and Heather,
+% for their time and willingness to provide extensive feedback and guidance on how to navigate my
+% research endeavors; and Guorong, for pushing me to learn more about medical imaging. I would also
+% like to thank my family and friends for their continuous support throughout the years and their
+% patience as I struggled through the pains of research. Finally, I would like to thank my partner in
+% crime, my loaf. Without her love and cooking, I would not have been able to make it this far.
+
+I extend my deepest gratitude to my advisor, Dr. Martin Styner, for his unwavering support and boundless optimism throughout my PhD journey. Martin provided me with the freedom to explore, learn, and grow – a gift for which I will always be grateful.
+My sincere appreciation goes to my committee members: Junier, for his guidance from the very beginning and for challenging me to pursue my ideas with rigor; Danielle and Heather, for their invaluable time, extensive feedback, and mentorship in navigating my research endeavors; and
+Guorong, for inspiring me to delve deeper into the field of medical imaging.
+
+I am also greatly thankful for my family and friends, whose continuous support and patience during the challenges of research have been instrumental in my progress. Lastly, I would like to thank my partner in crime, my loaf. Her love, companionship, and cooking have been the bedrock of my success in this journey.
+
 
 \clearpage
